# RTL-Based-PingPong

./: .gitignore  README.md
Testbenches/Graphics/: PixelGenerationPackage.sv  PixelGenerationTestbench.sv  VGATestbench.sv  VGATestbenchPackage.sv
Testbenches/N64Controller/: MockN64Device.sv  N64Testbench.sv  N64TestbenchPackage.sv
rtl/: BallPhysics.sv  PaddleAlgorithm.sv  PingPong.sv  PingPongComputeTop.sv
rtl/Graphics/: PixelGenerationLogic.sv  VGAGraphics.sv  VideoController.sv
rtl/N64Controller/: N64Controller.sv  UserControllerTop.sv
src/graphics/: CMakeLists.txt  defs.cpp  defs.h  gameState.cpp  gameState.h  main.cpp
src/graphics/drawables/: CMakeLists.txt  ball.cpp  ball.h  drawable.cpp  drawable.h  paddle.cpp  paddle.h  playerScore.cpp  playerScore.h
src/graphics/threadInterface/: renderThreads.cpp  renderThreds.h
src/graphics/tools/: CMakeLists.txt
